feat: moves counter

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <section class="score-panel">
            <div class="star-rating">
          	  <ul class="stars">
-         		  <li><i class="fa fa-star" ></i></li>
-         		  <li><i class="fa fa-star" ></i></li>
-         		  <li><i class="fa fa-star" ></i></li>
+         		  <li><i class="fa fa-star" id = "star1"></i></li>
+         		  <li><i class="fa fa-star" id = "star2"></i></li>
+         		  <li><i class="fa fa-star" id = "star3"></i></li>
            	</ul>
 
            	<span class="moves" id="moves">0</span><span> Moves</span>
