feat: popup message

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
         </ul>
     </div>
 
+  <!-- Source of popup code: W3schools -->
+    <div id="win-popup" class="popup zoomIn">
+
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h1>Congratulations!</h1>
+        <h3>Total moves: <span id="moves-count">0</span><span> You recieved: </span><span id="stars-count">0</span> stars</h3>
+      </div>
+
+</div>
 
     <script src="js/app.js"></script>
 </body>
