feat: play again

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <span class="close">&times;</span>
         <h1>Congratulations!</h1>
         <h3>Total moves: <span id="moves-count">0</span><span> You recieved: </span><span id="stars-count">0</span> stars</h3>
+        <div class="restart">
+         <span>Restart: </span><i class="fa fa-repeat"></i>
+       </div>
       </div>
 
 </div>
