--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
            	<span class="moves" id="moves">0</span><span> Moves</span>
            </div>
-
+           <div class="timer">
+          <span>Timer: </span>
+          <label class="minutes">00</label>:<label class="seconds">00</label>
+          </div>
+          <div class="restart" id="restart">
            <div class="restart" id="restart">
          		<span id="restart-text">Restart: </span><i class="fa fa-repeat"></i>
          	</div>
@@ -45,6 +49,7 @@
         <span class="close">&times;</span>
         <h1>Congratulations!</h1>
         <h3>Total moves: <span id="moves-count">0</span><span> You recieved: </span><span id="stars-count">0</span> stars</h3>
+          <h3>Game time: <label class="minutes">00</label>:<label class="seconds">00</label></h3>
         <div class="restart">
          <span>Restart: </span><i class="fa fa-repeat"></i>
        </div>
