--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <div id="win-popup" class="popup zoomIn">
 
       <div class="popup-content">
-        <span class="close">&times;</span>
         <h1>Congratulations!</h1>
         <h3>Total moves: <span id="moves-count">0</span><span> You recieved: </span><span id="stars-count">0</span> stars</h3>
           <h3>Game time: <label class="minutes">00</label>:<label class="seconds">00</label></h3>
+          <span class="close">See your game &times;</span>
         <div class="restart">
          <span>Restart: </span><i class="fa fa-repeat"></i>
        </div>
