--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
       <div class="popup-content">
         <h1>Congratulations!</h1>
-        <h3>Total moves: <span id="moves-count">0</span><span> You recieved: </span><span id="stars-count">0</span> stars</h3>
+        <h3>Total moves: <span id="moves-count">0</span><span> Stars: </span><span id="stars-count">0</span></h3>
           <h3>Game time: <label class="minutes">00</label>:<label class="seconds">00</label></h3>
-          <span class="close">See your game &times;</span>
+          <h3><span class="close">Return to see your game: &times;</span></h3>
         <div class="restart">
-         <span>Restart: </span><i class="fa fa-repeat"></i>
+         <h3><span>Play again: </span><i class="fa fa-repeat"></i></h3>
        </div>
       </div>
 
