--- a/index.html
+++ b/index.html
@@ -1,62 +1,60 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Matching Game</title>
-    <meta name="description" content="">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-    <link rel="stylesheet" href="css/app.css">
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <meta charset="utf-8">
+  <title>Matching Game</title>
+  <meta name="description" content="">
+  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+  <link rel="stylesheet" href="css/app.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
-    <div class="container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
+  <div class="container">
+    <header>
+      <h1>Matching Game</h1>
+    </header>
 
-        <section class="score-panel">
-           <div class="star-rating">
-         	  <ul class="stars">
-         		  <li><i class="fa fa-star" id = "star1"></i></li>
-         		  <li><i class="fa fa-star" id = "star2"></i></li>
-         		  <li><i class="fa fa-star" id = "star3"></i></li>
-           	</ul>
-
-           	<span class="moves" id="moves">0</span><span> Moves</span>
-           </div>
-           <div class="timer">
-          <span>Timer: </span>
-          <label class="minutes">00</label>:<label class="seconds">00</label>
-          </div>
-          <div class="restart" id="restart">
-           <div class="restart" id="restart">
-         		<span id="restart-text">Restart: </span><i class="fa fa-repeat"></i>
-         	</div>
-         </section>
-
-
-        <ul class="deck">
-
+    <section class="score-panel">
+      <div class="star-rating">
+        <ul class="stars">
+          <li><i class="fa fa-star" id = "star1"></i></li>
+          <li><i class="fa fa-star" id = "star2"></i></li>
+          <li><i class="fa fa-star" id = "star3"></i></li>
         </ul>
+
+        <span class="moves" id="moves">0</span><span> Moves</span>
+      </div>
+      <div class="timer">
+        <span>Timer: </span>
+        <label class="minutes">00</label>:<label class="seconds">00</label>
+      </div>
+      <div class="restart" id="restart">
+        <span id="restart-text">Restart: </span><i class="fa fa-repeat"></i>
+      </div>
+    </section>
+        
+    <ul class="deck">
+
+    </ul>
+  </div>
+
+  <!-- Based on  W3schools -->
+  <div id="win-popup" class="popup zoomIn">
+
+    <div class="popup-content">
+      <h1>Congratulations!</h1>
+      <h3>Total moves: <span id="moves-count">0</span><span> Stars: </span><span id="stars-count">0</span></h3>
+      <h3>Game time: <label class="minutes">00</label>:<label class="seconds">00</label></h3>
+      <h3><span class="close">Return to see your game: &times;</span></h3>
+      <div class="restart">
+        <h3><span>Play again: </span><i class="fa fa-repeat"></i></h3>
+      </div>
     </div>
 
-  <!-- Source of popup code: W3schools -->
-    <div id="win-popup" class="popup zoomIn">
+  </div>
 
-      <div class="popup-content">
-        <h1>Congratulations!</h1>
-        <h3>Total moves: <span id="moves-count">0</span><span> Stars: </span><span id="stars-count">0</span></h3>
-          <h3>Game time: <label class="minutes">00</label>:<label class="seconds">00</label></h3>
-          <h3><span class="close">Return to see your game: &times;</span></h3>
-        <div class="restart">
-         <h3><span>Play again: </span><i class="fa fa-repeat"></i></h3>
-       </div>
-      </div>
-
-</div>
-
-    <script src="js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
